Minor improvements in readability in the code

--- a/groebner-solitaire.html
+++ b/groebner-solitaire.html
@@ -23,8 +23,6 @@
     <div id="applet_container"></div>
 
     <div id="phase"></div>
-
-
 </div>
 
 <script type="text/javascript" src="deployggb.js"></script>
@@ -43,7 +41,7 @@
                 return pair[1];
             }
         }
-        return (false);
+        return false;
     }
 
 
@@ -225,8 +223,6 @@
 
             phase = 1;
             set_phase();
-
-            return;
         }
     }
 
