--- a/groebner-solitaire.html
+++ b/groebner-solitaire.html
@@ -384,7 +384,9 @@
                             } else {
                                 console.log("Nothing is generated. Dx=" + Dx + " Dy=" + Dy + " Ex=" + Ex + " Ey=" + Ey);
                                 alert("No segment is generated in this way, just a point, because the green and red segments are congruent. Please try again and generate a new green segment.");
-                                remove_segment(segs - 1);
+                                if (phase == 4) {
+                                   remove_segment(segs - 1);
+                                   }
                                 phase = 1;
                                 set_phase();
                                 for (i = 0; i < segs - 1; i++) {
@@ -477,7 +479,8 @@
         }
 
         if (phase === 1 || phase === 3) { // generation or reduction
-            if (selected.length < 3) {
+            if (selected.length < 2) {
+                console.log("selected=" + selected);
                 i = parseInt(object.substring(1));
                 if (selected.includes(i)) {
                     gA.deleteObject("i" + i);
