--- a/groebner-solitaire.html
+++ b/groebner-solitaire.html
@@ -82,7 +82,7 @@
         if (lang === "Hungarian") {
             messages = [ "Köszöntünk a Gröbner Solitaire játékban!",
                 "A GeoGebra betöltése folyamatban...",
-                "A játéktáblán néhány szakaszot látsz. Keresd meg a végső pozíciójukat!",
+                "A játéktáblán néhány szakaszt látsz. Keresd meg a végső pozíciójukat!",
                 "A megoldás ellenőrzése",
                 "Ezt a webalkalmazást <a %1$s>Kovács Zoltán</a> készítette. A program egy %4$s és <a %5$s>%6$s</a> által írt <a %3$s>matematikai tárgyú cikkben</a> bemutatott játékon alapul.",
                 "A GeoGebra %1$s verziójának betöltése sikerült.",
