--- a/groebner-solitaire.html
+++ b/groebner-solitaire.html
@@ -102,7 +102,7 @@
         if (lang === "German") {
             messages = [ "Willkommen im Spiel namens Gröbner Solitaire!",
                 "GeoGebra lädt...",
-                "Im Koordinatensystem siehs du ein paar Strecken. Suche ihre Endposition!",
+                "Im Koordinatensystem siehst du ein paar Strecken. Suche ihre Endposition!",
                 "Die Lösung überprüfen",
                 "Diese Applikation wurde von <a %1$s>%2$s</a> erstellt. Das Programm basiert auf einem Spiel von %4$s und <a %5$s>%6$s</a> verfassten <a %3$s>mathematischen Artikel</a>.",
                 "Die Version %1$s von GeoGebra wurde erfolgreich geladen.",
