--- a/groebner-solitaire.html
+++ b/groebner-solitaire.html
@@ -32,7 +32,7 @@
 
     MessageEnum = {
         WELCOME: 0, PLEASE_WAIT: 1, DESCRIPTION: 2, CHECK_BUTTON: 3, PROGRAM_INFO: 4, GEOGEBRA_VERSION: 5,
-        NOTHING_GENERATED: 6, ALREADY_EXISTS: 7, NEW_SEGMENT: 8, UNFINISHED: 9, FINISHED: 10
+        NOTHING_GENERATED_GREEN_RED: 6, NOTHING_GENERATED_RED_RED: 7, ALREADY_EXISTS: 8, NEW_SEGMENT: 9, UNFINISHED: 10, FINISHED: 11
         };
 
     // https://css-tricks.com/snippets/javascript/get-url-variables/
@@ -67,6 +67,7 @@
                 "This web app was programmed by <a %1$s>%2$s</a> based on the game described in <a %3$s>an article</a> by %4$s and <a %5$s>%6$s</a>.",
                 "Using GeoGebra %1$s.",
                 "No segment is generated in this way, just a point, because the green and red segments are congruent. Please try again and generate a new green segment.",
+                "No segment is generated in this way, just a point, because the red segments are congruent. Please try again.",
                 "The segment you obtained already exists as a red segment. Too bad! Please try again and generate a new green segment.",
                 "Great! You created a new segment since no further reduction is possible for the green segment.",
                 "Sorry, you did not find the final position yet! Please continue.",
@@ -87,6 +88,7 @@
                 "Ezt a webalkalmazást <a %1$s>Kovács Zoltán</a> készítette. A program egy %4$s és <a %5$s>%6$s</a> által írt <a %3$s>matematikai tárgyú cikkben</a> bemutatott játékon alapul.",
                 "A GeoGebra %1$s verziójának betöltése sikerült.",
                 "Nem keletkezett szakasz ily módon, csupán egy pont, mivel a zöld és piros szakaszok eltolással egymásba vihetők. Próbáld újra egy új zöld szakasz létrehozásával!",
+                "Nem keletkezett szakasz ily módon, csupán egy pont, mivel piros szakaszok eltolással egymásba vihetők. Próbáld újra!",
                 "A kapott szakasz már létezik mint piros szakasz. Kár! Próbáld újra egy új zöld szakasz létrehozásával!",
                 "Nagyszerű! Sikerült létrehoznod egy új szakaszt, mivel a zöld szakasz tovább már nem egyszerűsíthető.",
                 "Sajnos ez még nem a végső pozíció! Kérlek folytasd a játékot tovább!",
@@ -107,6 +109,7 @@
                 "Diese Applikation wurde von <a %1$s>%2$s</a> erstellt. Das Programm basiert auf einem Spiel von %4$s und <a %5$s>%6$s</a> verfassten <a %3$s>mathematischen Artikel</a>.",
                 "Die Version %1$s von GeoGebra wurde erfolgreich geladen.",
                 "Auf dieser Weise kann keine Strecke entstehen, nur ein Punkt, da die grüne und rote Strecke nur durch verschieben ineinander gebracht werden können. Versuche es nochmal mit der Erstellung einer grünen Strecke.",
+                "Auf dieser Weise kann keine Strecke entstehen, nur ein Punkt, da die roten Strecken nur durch verschieben ineinander gebracht werden können. Versuche es nochmal.",
                 "Die erhaltene Strecke existiert schon als rote Strecke. Schade! Versuche es nochmal mit der Erstellung einer grünen Strecke.",
                 "Super! Du hast es geschafft, eine neue Strecke zu erstellen, da man die grüne Strecke nicht mehr weiter vereinfachen kann.",
                 "Leider ist das noch nicht die Endposition! Bitte probiere es weiter.",
@@ -524,9 +527,13 @@
                                 Hy = Dy;
                             } else {
                                 console.log("Nothing is generated. Dx=" + Dx + " Dy=" + Dy + " Ex=" + Ex + " Ey=" + Ey);
-                                alert(messages[MessageEnum.NOTHING_GENERATED]);
+                                if (phase == 1) {
+                                    alert(messages[MessageEnum.NOTHING_GENERATED_RED_RED]);
+                                } else {
+                                    alert(messages[MessageEnum.NOTHING_GENERATED_GREEN_RED]);
+                                    remove_segment(segs - 1);
+                                }
                                 remove_ineqs();
-                                remove_segment(segs - 1);
                                 phase = 1;
                                 set_phase();
                                 for (i = 0; i < segs - 1; i++) {
